// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic css prop 1`] = `
.c0 {
  background: papayawhip;
  color: green;
}

<div
  className="c0"
/>
`;

exports[`Basic css prop 2`] = `
.c0 {
  padding: 0.5em 1em;
}

<button
  className="c0"
/>
`;

exports[`Basic css prop 3`] = `
.c0 {
  background: papayawhip;
  color: green;
}

<div
  className="c0"
/>
`;

exports[`Basic css prop 4`] = `
.c0 {
  padding: 0.5em 1em;
}

<button
  className="c0"
/>
`;

exports[`Styless css prop 1`] = `
.c0 {
  background: papayawhip;
  color: yellow;
}

<div
  className="c0"
  color="yellow"
/>
`;

exports[`Styless css prop 2`] = `
.c0 {
  padding: 0.5em 1em;
}

<button
  className="c0"
/>
`;

exports[`Styless css prop 3`] = `
.c0 {
  background: papayawhip;
  color: blue;
}

<div
  className="c0"
  color="blue"
/>
`;

exports[`Styless css prop 4`] = `
.c0 {
  padding: 1px;
}

<button
  className="c0"
/>
`;
